<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.admin.EventEditDifferenceFragment"
    android:id="@+id/fragment_event_edit_diff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                android:id="@+id/layoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvModTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_title_modification"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tvOrigTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_original_title"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layoutTitle">

                <TextView
                    android:id="@+id/labName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_name_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvModName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvOrigName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layoutEventName">

                <TextView
                    android:id="@+id/labStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_start_date_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvModStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvOrigStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layoutStartDate">

                <TextView
                    android:id="@+id/labEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_end_date_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvModEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvOrigEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toBottomOf="@id/layoutEndDate">

                <TextView
                    android:id="@+id/labZone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_zone_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvModZone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvOrigZone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLimited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layoutZone">

                <TextView
                    android:id="@+id/labLimited"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_limited_event_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvModLimited"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvOrigLimited"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layoutLimited">

                <TextView
                    android:id="@+id/labDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_desc_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tvModDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvOrigDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCloseFragment"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/edit_close_btn_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>