...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/id_btn_confirm_refuse_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...
